--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,39 @@
     <color name="white">#FFFFFFFF</color>
     <color name="app_text_color">#FFFF</color>
     <color name="app_color">#3F7E47</color>
+
+    <color name="cor_carrinho">#0c4b14</color>
+    <color name="cor_app_texto">#FFFFFF</color>
+    <color name="cor_botao_branco">#FFFFFF</color>
+    <color name="cor_splash">#FFFFFF</color>
+    <color name="cor_transparente_inicio">#FFFFFF</color>
+    <color name="cor_icone">#3F7E47</color>
+    <color name="cor_destaque">#3F7E47</color>
+    <color name="cor_destaque_texto">#FFFFFF</color>
+
+    <color name="colorPrimary">#FFFFFF</color>
+    <color name="colorPrimaryDark">#A4A4A4</color>
+    <color name="colorAccent">#000000</color>
+
+    <color name="cor_transparente">#00000000</color>
+    <color name="cor_cinza">#CECECE</color>
+    <color name="cor_cinza_mais_escuro">#7D7D7D</color>
+    <color name="cor_cinza_mais_escuro_ios">#585858</color>
+    <color name="cor_vermelho_mais_claro">#e86868</color>
+    <color name="cor_cinza_transparente">#80585858</color>
+    <color name="dark_red">#C80605</color>
+    <color name="cor_verde_claro">#3F7E47</color>
+    <color name="cor_azul_facebook">#0D5488</color>
+    <color name="cor_azul">#0D5CD7</color>
+    <color name="cor_cinza_linhas">#e0e0e0</color>
+    <color name="cor_cinza_claro">#CECECE</color>
+    <color name="cor_whatsapp">#25D366</color>
+    <color name="cor_verde">#00b759</color>
+    <color name="cor_cinza_fundo">#F9F9F9</color>
+    <color name="cor_vermelho_promocao_lista">#FFADAD</color>
+    <color name="cor_url">#0000FF</color>
+    <color name="cor_switch">#34c759</color>
+    <color name="cor_preto">#000000</color>
+
+    <color name="instagram_color">#833AB4</color>
 </resources>
