--- a/app/src/main/res/layout/frm_card.xml
+++ b/app/src/main/res/layout/frm_card.xml
@@ -1,87 +1,102 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp"
-    android:gravity="center"
-    android:background="#F0F0F0">
+    android:orientation="vertical">
 
-    <!-- Layout para a área da imagem com as setas -->
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
-
-        <!-- Seta para a esquerda -->
-        <ImageButton
-            android:id="@+id/cmdPreviousImage"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:contentDescription="@string/previous_image"
-            android:padding="8dp"
-            android:rotationY="-180"
-            android:scaleType="centerInside"
-            android:src="@drawable/arrow_icon" />
-
-        <!-- Imagem principal -->
-        <ImageView
-            android:id="@+id/imgFlashCard"
-            android:layout_width="250dp"
-            android:layout_height="250dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:scaleType="centerCrop"
-            android:contentDescription="@string/flash_card_description"
-            android:background="#DDDDDD" />
-
-        <!-- Seta para a direita -->
-        <ImageButton
-            android:id="@+id/cmdNextImage"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:src="@drawable/arrow_icon"
-            android:contentDescription="@string/next_image"
-            android:scaleType="centerInside"
-            android:padding="8dp" />
-    </LinearLayout>
-
-    <!-- Campo de texto para resposta -->
-    <EditText
-        android:id="@+id/txtAnswerFlashCard"
+    <!-- Toolbar sempre posicionada no topo -->
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        style="@style/AppToolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Digite o nome da imagem"
-        android:textAlignment="center"
-        android:layout_marginTop="16dp"
-        android:padding="12dp"
-        android:background="@drawable/edit_text_flashcard_background"
-        android:layout_marginBottom="16dp"
-        android:inputType="text" />
+        android:layout_height="?attr/actionBarSize"
+        android:elevation="2dp"
+        app:title="@string/back_toolbar" />
 
-    <!-- Botão de envio -->
-    <Button
-        android:id="@+id/cmdSendResponse"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/button_flashcard_send"
-        android:textColor="@color/cor_app_texto"
-        android:background="@drawable/button_background_app"
-        />
+    <!-- Layout principal que centraliza o conteúdo abaixo da Toolbar -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#F0F0F0"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="16dp">
 
-    <!-- Mensagem de feedback para o usuário -->
-    <TextView
-        android:id="@+id/lblFeedbackAnswer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="mensagem de feedback ao usuario"
-        android:layout_marginTop="8dp"
-        android:textSize="14sp"
-        android:textColor="#FF0000"
-        android:visibility="visible" />
+        <!-- Layout para a área da imagem com as setas -->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
+            <!-- Seta para a esquerda -->
+            <ImageButton
+                android:id="@+id/cmdPreviousImage"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:contentDescription="@string/previous_image"
+                android:padding="8dp"
+                android:rotationY="180"
+                android:scaleType="centerInside"
+                android:src="@drawable/arrow_icon" />
+
+            <!-- Imagem principal -->
+            <ImageView
+                android:id="@+id/imgFlashCard"
+                android:layout_width="250dp"
+                android:layout_height="250dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:background="#DDDDDD"
+                android:contentDescription="@string/flash_card_description"
+                android:scaleType="centerCrop" />
+
+            <!-- Seta para a direita -->
+            <ImageButton
+                android:id="@+id/cmdNextImage"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:contentDescription="@string/next_image"
+                android:padding="8dp"
+                android:scaleType="centerInside"
+                android:src="@drawable/arrow_icon" />
+        </LinearLayout>
+
+        <!-- Campo de texto para resposta -->
+        <EditText
+            android:id="@+id/txtAnswerFlashCard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/edit_text_flashcard_background"
+            android:hint="@string/hint_flashcard"
+            android:inputType="text"
+            android:padding="12dp"
+            android:textAlignment="center" />
+
+        <!-- Botão de envio -->
+        <Button
+            android:id="@+id/cmdSendResponse"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/button_background_app"
+            android:text="@string/button_flashcard_send"
+            android:textColor="@color/cor_app_texto" />
+
+        <!-- Mensagem de feedback para o usuário -->
+        <TextView
+            android:id="@+id/lblFeedbackAnswer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/feedback_message"
+            android:textColor="@color/dark_red"
+            android:textSize="14sp"
+            android:visibility="gone" />
+    </LinearLayout>
 </LinearLayout>
