--- a/app/src/main/res/layout/frm_login.xml
+++ b/app/src/main/res/layout/frm_login.xml
@@ -46,7 +46,6 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
                         android:text="@string/toolbar_login"
                         android:textColor="@color/cor_app"
                         android:textSize="@dimen/text_size_18"
@@ -106,7 +105,7 @@
                                 app:passwordToggleTint="@color/cor_app">
 
                                 <EditText
-                                    android:id="@+id/txtSenha"
+                                    android:id="@+id/txtPasswod"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:background="@null"
@@ -161,7 +160,7 @@
                 android:visibility="visible" />
 
             <Button
-                android:id="@+id/cmdInstagramLogin"
+                android:id="@+id/cmdLoginInstagram"
                 android:layout_width="@dimen/button_app_width"
                 android:layout_height="@dimen/button_app_height"
                 android:layout_marginBottom="15dp"
@@ -172,7 +171,7 @@
                 android:visibility="visible" />
 
             <TextView
-                android:id="@+id/lblEsqueciSenha"
+                android:id="@+id/lblForgotPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
@@ -182,7 +181,7 @@
                 android:textColor="@color/cor_app" />
 
             <TextView
-                android:id="@+id/lblNaoTenhoCadastro"
+                android:id="@+id/lblNoRegister"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
